--- a/src/common/Button.html
+++ b/src/common/Button.html
@@ -1,14 +1,20 @@
 <script>
 
+import {createEventDispatcher} from "svelte";
+
 export let color = "primary";
 export let className = "";
 export let style = "";
 
+const dispatch = createEventDispatcher();
+const onclick = (e) => dispatch('click', e); 
+
+
 </script>
 
 <button class="{color} {className}" 
-        on:click
-        style="{style}">
+        style="{style}"
+        on:click={onclick}>
     <slot/>
 </button>
 
@@ -32,7 +38,7 @@ button {
     border-color: var(--primary75);
 }
 
-.primary:pressed {
+.primary:active {
     background-color: var(--primarydark);
     border-color: var(--primarydark);
 }
