--- a/src/database/FieldView.html
+++ b/src/database/FieldView.html
@@ -2,20 +2,42 @@
 import Dropdown from "../common/Dropdown.html";
 import Textbox from "../common/Textbox.html";
 import Button from "../common/Button.html";
+import NumberBox from "../common/NumberBox.html";
+import ValuesList from "../common/ValuesList.html";
 import ErrorsBox from "../common/ErrorsBox.html";
-
-import {cloneDeep, assign, keys, map} from "lodash/fp";
-import {allTypes, validate} from "../common/core";
+import Checkbox from "../common/Checkbox.html";
+import DatePicker from "../common/DatePicker.html";
+import {cloneDeep, assign, keys, 
+    isNumber, includes, map, isBoolean} from "lodash/fp";
+import {allTypes, validate, getPotentialReferenceIndexes,
+    getPotentialReverseReferenceIndexes, getNode} from "../common/core";
 
 export let field;
 export let allFields;
 export let onFinished = () => {};
+export let database;
 
 let errors = [];
 
 //$:isValid = errors.length === 0;
-$:clonedField = cloneDeep(field);
-$:isNew = !!field && field.name.length === 0;
+$: clonedField = cloneDeep(field);
+$: isNew = !!field && field.name.length === 0;
+$: typeOptions = allTypes[clonedField.type].optionDefinitions;
+
+$: possibleReferenceIndexes = getPotentialReferenceIndexes(
+    database.hierarchy, database.currentNode
+);
+
+$: selectedReverseRefIndex = 
+    !clonedField.typeOptions.indexNodeKey 
+    ? ""
+    : getNode(database.hierarchy, clonedField.typeOptions.indexNodeKey);
+
+$: possibleReverseReferenceIndexes = 
+    !selectedReverseRefIndex 
+    ? []
+    : getPotentialReverseReferenceIndexes(
+        database.hierarchy, selectedReverseRefIndex);
 
 const save = () => {
 
@@ -25,6 +47,15 @@ const save = () => {
         assign(field)(clonedField)
     );
 }
+
+const isNumberField = optName => 
+    includes(optName)
+            (["maxLength", "minLength",
+             "maxValue", "minValue", 
+             "decimalPlaces"])
+    && clonedField.type !== "date";
+
+
 
 </script>
 
@@ -41,13 +72,42 @@ const save = () => {
     <Textbox label="Label" bind:text={clonedField.label} />
     <Dropdown label="Type" bind:selected={clonedField.type} options={keys(allTypes)} />
 
+    {#if clonedField.type === "string"}
+    <NumberBox label="Max Length" bind:value={clonedField.typeOptions.maxLength} />
+    <ValuesList label="Values (options)" bind:values={clonedField.typeOptions.values} />
+    <Checkbox label="Declared Values Only" bind:checked={clonedField.typeOptions.allowDeclaredValuesOnly} />
+    {:else if clonedField.type === "bool"}
+    <Checkbox label="Allow Null" bind:checked={clonedField.typeOptions.allowNulls} />
+    {:else if clonedField.type === "datetime"}
+    <DatePicker label="Min Value" bind:value={clonedField.typeOptions.minValue} />
+    <DatePicker label="Max Value" bind:value={clonedField.typeOptions.maxValue} />
+    {:else if clonedField.type === "number"}
+    <NumberBox label="Min Value" bind:value={clonedField.typeOptions.minValue} />
+    <NumberBox label="Max Value" bind:value={clonedField.typeOptions.maxValue} />
+    <NumberBox label="Decimal Places" bind:value={clonedField.typeOptions.decimalPlaces} />
+    {:else if clonedField.type === "reference"}
+    <Dropdown label="Lookup Index" 
+              options={possibleReferenceIndexes} 
+              valueMember={n => n.nodeKey()}
+              textMember={n => n.name}
+              bind:selected={clonedField.typeOptions.indexNodeKey} />
+
+    <Dropdown label="Reverse Reference Index" 
+              options={possibleReverseReferenceIndexes} 
+              multiple=true
+              valueMember={n => n.nodeKey()}
+              textMember={n => n.name}
+              bind:selected={clonedField.typeOptions.reverseIndexNodeKeys} />
+
+    {:else if clonedField.type.startsWith("array")}
+    <NumberBox label="Min Length" bind:value={clonedField.typeOptions.minLength} />
+    <NumberBox label="Max Length" bind:value={clonedField.typeOptions.maxLength} />
+    {/if}
 
     <div class="actions">
         <Button color="primary" on:click={save}>Save</Button>
         <Button color="secondary" on:click={() => onFinished(false)}>Cancel</Button>
     </div>
-
-
 
 </div>
 
