electron build, with assets

--- a/src/NoPackage.html
+++ b/src/NoPackage.html
@@ -8,7 +8,7 @@ import {createNewPackage} from "./builderStore";
 
 <div class="root">
     <div class="inner">
-        <img src="/assets/budibase-logo.png" class="logo" alt="budibase logo"/>
+        <img src="./assets/budibase-logo.png" class="logo" alt="budibase logo"/>
         <div>
             
             <div>
